# qa_guru_16_poetry

./: .gitignore
qa_guru_16_poetry_new/: pyproject.toml
