[tool.poetry]
name = "qa-guru-16-poetry-new"
version = "0.1.0"
description = ""
authors = ["eisaeva <hanymka@me.com>"]
readme = "README.md"
packages = [{include = "qa_guru_16_poetry_new"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
